# wasmcloud-super-heroes

./: .gitignore  Cargo.toml  README.md  build.sh  cardamon.toml  deploy_all.sh  docker-compose.yml  nats.conf
.github/workflows/: build-and-deploy.yml
builder/: Dockerfile
database/villains-db/init/: villains.sql
k6/: 10.js  50.js  build.yml  high.js  load.js  low.js  max.js  none.js  randomFight.js
lib/bindings/: Cargo.toml  wasmcloud.toml
lib/superhero-types/: Cargo.toml  wasmcloud.toml
services/: build.sh  wadm.yaml
services/fights-rest/: Cargo.toml  deploy.sh  wadm.yaml  wasmcloud.toml
services/hero-repository/: Cargo.toml  deploy.sh  wasmcloud.toml
services/hero-rest/: Cargo.toml  deploy.sh  wasmcloud.toml
services/location-repository/: Cargo.toml  deploy.sh  wadm.yaml
services/location-rest/: Cargo.toml  deploy.sh  wasmcloud.toml
services/rest-fights/: Cargo.toml  build.sh  deploy.sh  wadm.yaml  wasmcloud.toml
services/rest-fights-over-http/: Cargo.toml  deploy.sh  wadm.yaml  wasmcloud.toml
services/rest-heroes/: Cargo.toml  build.sh  deploy.sh  wadm.yaml  wasmcloud.toml
services/rest-heroes/src/: hero_repository.rs  heroes.rs  lib.rs  types.rs
services/rest-heroes/wit/: world.wit
services/rest-locations/: Cargo.toml  build.sh  deploy.sh  wadm.yaml  wasmcloud.toml
services/rest-villains/: Cargo.toml  build.sh  deploy.sh  wadm.yaml  wasmcloud.toml
services/villain-repository/: Cargo.toml  deploy.sh  wadm.yaml  wasmcloud.toml
services/villain-rest/: Cargo.toml  deploy.sh  wasmcloud.toml
src/: lib.rs
wit/: world.wit
(+32 files in other folders)
