[workspace]
members = [
    "services/rest-heroes",
    "lib/superhero-types"
]
[workspace.dependencies]
chrono = "0.4.40"
serde = { version = "1", features = ["alloc", "derive", "serde_derive"], default-features = false }

serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
wit-bindgen = "0.32"
