[workspace]
members = [
    "services/rest-heroes",
    # "services/rest-villains",
    # "lib/bindings"
]
[workspace.dependencies]
chrono = "0.4.40"
serde = { version = "1", features = ["alloc", "derive", "serde_derive"], default-features = false }

serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4"] }
wit-bindgen = { version = "0.42.1" }
wasi = "=0.14.2+wasi-0.2.4"
