[package]
name = "rest-heroes"
edition = "2021"
version = "0.1.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["alloc", "derive", "serde_derive"], default-features = false }
serde_json = "1"
# wasi = "0.13.2"
wit-bindgen = "0.41"
superhero-types = { path = "../../lib/superhero-types" }
